# Todi

./: .gitignore  LICENSE  README.md  Todi-설치.bat  Todi-설치.command
.github/workflows/: build.yml
sticker-tauri/: .gitignore  package-lock.json  package.json
sticker-tauri/src/: calendar.html  common.js  doing.html  done.html  index.html  main.js  styles.css  todo.html  trash.html
sticker-tauri/src-tauri/: Cargo.toml  tauri.conf.json
sticker-tauri/src-tauri/capabilities/: default.json
sticker-tauri/src-tauri/icons/: icon.icns
sticker-tauri/src-tauri/src/: lib.rs  main.rs
