[package]
name = "todi"
version = "0.1.0"
description = "Todi - 칸반 메모"
authors = ["you"]
edition = "2021"

[lib]
name = "todi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-autostart = "2"
chrono = "0.4"
font-kit = "0.14"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }
